# sc2-kill-calculator

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: error.rs  game_data.rs  lib.rs  main.rs  rest.rs
tests/: main.rs  test_main.rs
